# flask-course

./: .env-example  app_old.py  decorator.py  docker-compose.yaml  dockerfile  pyproject.toml  script.sh
main_app/: app.py  models.py
main_app/purchase_orders/: model.py  resources.py  routes.py
main_app/purchase_orders_items/: model.py  resources.py
main_app/tests/: conftest.py
main_app/tests/purchase_orders/: test_resources.py
main_app/tests/purchase_orders_items/: test_resources.py  test_resources_orders.py
