[tool.poetry]
name = "flask-course"
version = "0.1.0"
description = ""
authors = ["carlos1377 <carloseduardoorso1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-restful = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
